--- a/style.css
+++ b/style.css
@@ -157,10 +157,10 @@ header{
     grid-column:3/span 2;
 }
 /*----------------------------------------------------------*/
-/*----------------------- SECTION-VIDEO -------------------*/
+/*----------------------- SECTION-NUMBER -------------------*/
 /*----------------------------------------------------------*/
 #video{
-    padding:0 15%;
+    padding:0 10%;
     margin: 4rem 0;
 }
 .statistic{
@@ -195,11 +195,76 @@ header{
     transform: translateY(-0.5rem)
 }
 /*----------------------------------------------------------*/
+/*----------------------- SECTION-GALLERY -------------------*/
+/*---------------------------------------------------------*/
+.gallery-inner{
+    background-image: url(./layout/images/s1.jpg);
+    background-size:cover;
+    background-position: center;
+    padding: 3% 10%;
+}
+.gallery-inner h1{
+    text-align: center;
+    color:white;
+    font-size: 3rem;
+    margin-bottom: 3rem;
+}
+.gallery-details{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    grid-column-gap:20px;
+}
+.gallery-details-item{
+    text-align: center;
+    margin-bottom: 8%;
+}
+.gallery-details-item i{
+    font-size: 4rem;
+    background-color: white;
+    border-radius: 50%;
+    /* padding: 20px 20px 20px 20px; */
+    width: 100px;
+    line-height: 100px;
+    height: 100px;
+    color:#4e2a84 ;
+    border : 1px solid #4e2a84;
+    transition: all 0.5s;
+}
+.gallery-details-item h4{
+    margin: 14px 0;
+    font-size: 1.5rem;
+    font-weight: 500;
+}
+.gallery-details-item p{
+    font-size: 0.9rem;
+    font-weight: 300;
+    letter-spacing: 0.5px;
+    line-height: 25px;
+    margin: 20px 0;
+}
+.gallery-details-item button{
+    background-color: #ff0e83;
+    border: 1px solid white;
+    padding: 10px 20px;   
+    color: white;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: all 0.5s;
+}
+.gallery-details-item i:hover{
+    color: #ff0e83;
+}
+.gallery-details-item button:hover{
+    background-color: white;
+    color: black;
+    border:1px solid #ff0e83;
+}
+/*----------------------------------------------------------*/
 /*----------------------- SECTION-TEAM -------------------*/
 /*----------------------------------------------------------*/
 #team{
     background-color: #4e2a84;
-    padding:3rem 20% 4% 20%;
+    padding:3rem 10% 4% 10%;
 }
 .team-title{
     display: flex;
@@ -254,22 +319,40 @@ header{
     bottom: 0;
     right: 0;
     color: white;
-    padding: 50px 20px;
     transition: 0.8s;
 }
 .overlay ul li{
     list-style: none;
    float: left;
     border: 1px solid white;
-    width: 30%;
+    width: 50px;
+    height: 50px;
     margin-right: 5px;
 }
+.overlay h2{
+    color: #ff0e83;
+    font-size: 2rem;
+    margin: 20px 20px;
+}
+.overlay span{
+    font-size: 1rem;
+    margin: 20px 20px;
+}
+.overlay ul{
+    margin: 20px 20px;
+}
+.overlay p{
+    font-size: 1rem;
+    margin: 20px 20px;
+}
+.overlay-inner{
+    position: absolute;
+    transform: translate(0%,65%);
+}
 .overlay .fab{
-    text-align: center;
+    
     color:white;
-    font-size: 10px;
-    width: 100%;
-    padding: 10px 0px;
+    font-size: 1rem;
 }
 .overlay ul li a{
     text-decoration: none;  
