--- a/style.css
+++ b/style.css
@@ -1,10 +1,14 @@
 header, section, footer, aside, nav, main, article, figure {
     display: block;
 }
-*{
+*, ::after , ::before{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    overflow-wrap: anywhere;
+}
+i{
+    overflow-y: hidden;
 }
 body{
     font-size:12px;
@@ -166,7 +170,6 @@ header{
 .statistic{
     display: grid;
     grid-template-columns: repeat(4,1fr);
-    margin-bottom: 4rem;
 }
 .statistic-item{
     text-align: center;
@@ -260,6 +263,61 @@ header{
     border:1px solid #ff0e83;
 }
 /*----------------------------------------------------------*/
+/*----------------------- SECTION-OUR GALLERY -------------------*/
+/*---------------------------------------------------------*/
+#ourgallery{
+    padding: 15px;
+}
+.ourgallery-grid{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    grid-column-gap:10px;
+    grid-row-gap:10px;
+}
+.ourgallery-grid-item{
+    position: relative;
+}
+.ourgallery-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 2em;
+    color: #fff;
+    text-transform: uppercase;
+    width: 100%;
+    height: 100%;
+}
+.ourgallery-overlay h2{
+    position: absolute;
+    top: 30px;
+}
+
+.ourgallery-overlay span{
+    font-weight: 600;
+}
+.ourgallery-grid-item h2::after{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 4px;
+    background: red;
+    content: " ";
+    -webkit-transform: translate3d(0,40px,0);
+    transform: translate3d(0,40px,0);
+}
+.ourgallery-grid-item a img{
+    width: 100%;
+    box-sizing: border-box;
+}
+.ourimg1{
+    grid-column: 1/span 2;
+    
+}
+.ourimg6{
+    grid-column: 3/span 2;
+}
+/*----------------------------------------------------------*/
 /*----------------------- SECTION-TEAM -------------------*/
 /*----------------------------------------------------------*/
 #team{
@@ -320,6 +378,7 @@ header{
     right: 0;
     color: white;
     transition: 0.8s;
+    
 }
 .overlay ul li{
     list-style: none;
@@ -346,8 +405,12 @@ header{
     margin: 20px 20px;
 }
 .overlay-inner{
-    position: absolute;
-    transform: translate(0%,65%);
+   padding: 50px;
+}
+.overlay-inner ul li{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .overlay .fab{
     
